Fix muted user list being broken in multi-column layout and smartphone layout

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -1829,6 +1829,8 @@ body > [data-popper-placement] {
 
 .account__wrapper {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
   gap: 10px;
   align-items: center;
 }
